feat: 企业级多租户改造 - Phase 1-4
Phase 1: 数据库表结构 (8张企业级表 + 迁移脚本)
- 租户、角色、权限、审计日志等企业级数据表
- 知识库成员、文档审核状态等业务扩展

Phase 2: 框架层基础设施
- @RequirePermission / @Auditable 注解
- PermissionAspect / AuditAspect AOP 切面
- DataMaskUtil 数据脱敏工具
- RagentTenantLineHandler 多租户数据隔离

Phase 3: 后端企业管理接口
- 租户管理 CRUD API
- 知识库成员管理 API
- 文档审核工作流 API
- 审计日志记录与消费
- 文件上传安全校验
- SSO 认证提供者框架
- TenantInitializer 初始化器

Phase 4: 前端管理页面
- TenantListPage 租户管理页
- KbMemberDialog 知识库成员弹窗
- DocumentReviewPage 文档审核页
- AuditLogPage 审计日志页
- 管理后台菜单和路由更新
- 登录页 SSO 按钮

配置修复:
- pom.xml: JDK 24 + Lombok 兼容 (annotationProcessorPaths)
- .mvn/jvm.config: JDK 24 JVM 参数
- application.yaml: 企业级配置项