@@ -18,9 +18,8 @@
 package com.nageoffer.ai.ragent.user.config;
 
 import cn.dev33.satoken.stp.StpInterface;
-import cn.hutool.core.util.StrUtil;
-import com.nageoffer.ai.ragent.user.dao.entity.UserDO;
-import com.nageoffer.ai.ragent.user.dao.mapper.UserMapper;
+import com.nageoffer.ai.ragent.user.dao.mapper.PermissionMapper;
+import com.nageoffer.ai.ragent.user.dao.mapper.RoleMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -29,52 +28,31 @@ import java.util.List;
 
 /**
  * Sa-Token 权限认证接口实现类
- * 用于实现 Sa-Token 框架的权限和角色验证逻辑
+ * <p>从 RBAC 表查询用户的角色和权限列表，支持多租户环境。
  */
 @Component
 @RequiredArgsConstructor
 public class SaTokenStpInterfaceImpl implements StpInterface {
 
-    /**
-     * 用户数据访问层
-     */
-    private final UserMapper userMapper;
+    private final RoleMapper roleMapper;
 
-    /**
-     * 获取用户权限列表
-     *
-     * @param loginId   登录用户ID
-     * @param loginType 登录类型
-     * @return 权限列表（当前实现返回空列表）
-     */
+    private final PermissionMapper permissionMapper;
+
     @Override
     public List<String> getPermissionList(Object loginId, String loginType) {
-        return Collections.emptyList();
+        if (loginId == null) {
+            return Collections.emptyList();
+        }
+        List<String> codes = permissionMapper.selectPermissionCodesByUserId(loginId.toString());
+        return codes == null ? Collections.emptyList() : codes;
     }
 
-    /**
-     * 获取用户角色列表
-     *
-     * @param loginId   登录用户ID
-     * @param loginType 登录类型
-     * @return 角色列表，包含用户的角色信息
-     */
     @Override
     public List<String> getRoleList(Object loginId, String loginType) {
         if (loginId == null) {
             return Collections.emptyList();
         }
-
-        String loginIdStr = loginId.toString();
-        if (!StrUtil.isNumeric(loginIdStr)) {
-            return Collections.emptyList();
-        }
-
-        UserDO user = userMapper.selectById(loginIdStr);
-        if (user == null || StrUtil.isBlank(user.getRole())) {
-            return Collections.emptyList();
-        }
-
-        return List.of(user.getRole());
+        List<String> codes = roleMapper.selectRoleCodesByUserId(loginId.toString());
+        return codes == null ? Collections.emptyList() : codes;
     }
 }
